--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.2.5",
     "@types/cli-spinner": "^0.2.3",
     "@types/d3": "^7.4.3",
     "@types/hast": "^3.0.4",
