--- a/.github/workflows/dependabot-auto_merge.yml
+++ b/.github/workflows/dependabot-auto_merge.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'AZapie/docs'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'AZapie/docs.zapien.dev'
     steps:
       - name: Dependabot metadata
         id: metadata
